--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -2,37 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
+              android:layout_marginBottom="50dp"
               android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="40dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
-            android:gravity="left"
+            android:gravity="center_vertical"
             android:text="@string/time"/>
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="40dp"
+            android:gravity="right"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/record_time_text"
-                android:layout_width="1dp"
-                android:layout_weight="1"
-                android:layout_height="fill_parent"
-                style="@style/diary_addfragment_text"
-                android:gravity="right"
-                android:text="@string/time"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 style="@style/diary_addfragment_text"
-                android:gravity="right"
-                android:text=">"/>
+                android:gravity="center_vertical"
+                android:text="@string/time"/>
         </LinearLayout>
     </LinearLayout>
     <View
@@ -41,14 +36,16 @@
         android:background="#aa000000" />
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:gravity="center"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
-            android:gravity="left"
+            android:gravity="center_vertical"
             android:text="@string/lovepet"/>
         <LinearLayout
             android:layout_width="fill_parent"
@@ -57,54 +54,14 @@
             android:id="@+id/pet_select"
             android:orientation="horizontal">
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="100dp"
+                android:layout_width="1dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="right"
+                android:layout_marginLeft ="170dp"
                 android:id="@+id/pet_list_layout"
                 android:orientation="horizontal">
-                <com.petbus.tj.petbus.ui.CircleImageView
-                    android:gravity="center"
-                    android:id="@+id/pet_photo_1"
-                    android:background="#00000000"
-                    android:clickable="false"
-                    android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
-                    android:layout_marginRight ="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/photo_normal" />
-                <com.petbus.tj.petbus.ui.CircleImageView
-                    android:gravity="center"
-                    android:id="@+id/pet_photo_2"
-                    android:background="#00000000"
-                    android:clickable="false"
-                    android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
-                    android:layout_marginRight ="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/photo_normal" />
-                <com.petbus.tj.petbus.ui.CircleImageView
-                    android:gravity="center"
-                    android:id="@+id/pet_photo_3"
-                    android:background="#00000000"
-                    android:clickable="false"
-                    android:adjustViewBounds="true"
-                    android:maxHeight="80dp"
-                    android:maxWidth="80dp"
-                    android:minHeight="80dp"
-                    android:minWidth="80dp"
-                    android:layout_marginRight ="30dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/photo_normal" />
-                <com.petbus.tj.petbus.ui.CircleImageView
+                <ImageView
                     android:gravity="center"
                     android:id="@+id/pet_photo_4"
                     android:background="#00000000"
@@ -114,16 +71,58 @@
                     android:maxWidth="80dp"
                     android:minHeight="80dp"
                     android:minWidth="80dp"
-                    android:layout_marginRight ="40dp"
+                    android:layout_marginLeft ="130dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_3"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginLeft ="90dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_2"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginLeft ="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/photo_normal" />
+                <ImageView
+                    android:gravity="center"
+                    android:id="@+id/pet_photo_1"
+                    android:background="#00000000"
+                    android:clickable="false"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="80dp"
+                    android:maxWidth="80dp"
+                    android:minHeight="80dp"
+                    android:minWidth="80dp"
+                    android:layout_marginLeft ="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/photo_normal" />
             </RelativeLayout>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="10dp"
                 android:layout_height="fill_parent"
                 style="@style/diary_addfragment_text"
-                android:gravity="left"
+                android:gravity="center_vertical"
                 android:text=">"/>
         </LinearLayout>
     </LinearLayout>
@@ -135,12 +134,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             style="@style/diary_addfragment_text"
-            android:gravity="left"
+            android:gravity="center_vertical"
             android:text="@string/actiontype"/>
         <LinearLayout
             android:layout_width="fill_parent"
@@ -151,7 +152,7 @@
                 android:id="@+id/action_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:choiceMode="singleChoice"/>
         </LinearLayout>
     </LinearLayout>
@@ -160,11 +161,12 @@
         android:layout_height="2dp"
         android:background="#aa000000" />
     <LinearLayout
-        android:layout_weight="1"
-        android:layout_height="1dp"
+        android:layout_height="150dp"
         android:layout_width="match_parent"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical">
         <EditText
             android:id="@+id/remark_text_input"
@@ -177,42 +179,35 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="left"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
             <ImageView
                 android:id="@+id/picture_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:background="#00000000"
+                android:minHeight="80dp"
+                android:minWidth="80dp"
                 android:src="@mipmap/camera_normal"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
             android:id="@+id/entry_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/diary_addfragment_text"
-            android:gravity="left"
+            android:background="@drawable/button_shape" 
             android:text="@string/save"/>
     </LinearLayout>
 </LinearLayout>
