--- a/project/app/src/main/res/layout/petview_select.xml
+++ b/project/app/src/main/res/layout/petview_select.xml
@@ -3,40 +3,43 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     android:background="@mipmap/listpetbackground">
 
     <TextView
         android:id="@+id/dialog_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:gravity="center"
-        android:text="@string/title"
-        android:textColor="#000000"
-        android:textStyle="bold" />
+        android:text="@string/pet_select_title"
+        style="@style/select_titlebar_text"/>
     <View
         android:layout_width="fill_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="1dp"
-        android:background="@color/colorBlack" /> 
-
+        android:background="@color/select_box_line" /> 
     <GridView
         android:id="@+id/horizon_listview"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="300dip"
-        android:numColumns="2"
-        android:columnWidth="90dp"
+        android:layout_height="match_parent"
+        android:numColumns="4"
+        android:columnWidth="40dp"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
+        android:verticalSpacing="30dp"
+        android:horizontalSpacing="30dp"
         android:overScrollMode="never"
         android:clickable="false"
         android:layout_alignParentTop="true"/>
     <Button
         android:gravity="center"
         android:id="@+id/confirm_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:background="@drawable/button_shape" 
         android:text="@string/confirm" />
 </LinearLayout>
