--- a/project/app/src/main/res/layout/petview_select_item.xml
+++ b/project/app/src/main/res/layout/petview_select_item.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <com.petbus.tj.petbus.ui.CircleImageView
+    <ImageView
         android:gravity="center"
         android:id="@+id/pet_photo"
         android:background="#00000000"
@@ -18,17 +18,12 @@
         android:src="@mipmap/photo_normal" />
     <TextView
         android:id="@+id/pet_nickname_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/petname"
         android:textColor="#000000"
         android:textStyle="bold" />
-    <TextView
-        android:gravity="center"
-        android:id="@+id/select_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/selected" />
 </LinearLayout>
