--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -97,14 +97,15 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="70dp"
             android:background="#00000000"
             android:orientation="horizontal">
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="30dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -118,18 +119,17 @@
                     android:src="@mipmap/fade" />
                 <TextView
                     android:id="@+id/nickname_text_1"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     style="@style/diary_record_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/petname"/>
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -143,18 +143,17 @@
                     android:src="@mipmap/fade" />
                 <TextView
                     android:id="@+id/nickname_text_2"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     style="@style/diary_record_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/petname"/>
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
                 android:background="#00000000"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -168,20 +167,19 @@
                     android:src="@mipmap/fade" />
                 <TextView
                     android:id="@+id/nickname_text_3"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     style="@style/diary_record_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/petname"/>
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
                 android:background="#00000000"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:orientation="vertical">
                 <ImageView
@@ -193,8 +191,8 @@
                     android:src="@mipmap/fade" />
                 <TextView
                     android:id="@+id/nickname_text_4"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     style="@style/diary_record_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
