--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:minWidth">100dp</item>
     </style>
 
+    <style name="select_titlebar_text">
+        <item name="android:textSize">23dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <style name="titlebar_text">
         <item name="android:textSize">23dp</item>
         <item name="android:textColor">#000000</item>
