--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -9,23 +9,40 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="24dp"
-        android:layout_marginLeft="63dp"
         android:background="@color/app_background"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/record_times"
-            android:layout_width="wrap_content"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="99dp"
+            android:gravity="right"
             android:layout_height="fill_parent"
-            style="@style/diary_record_text"
-            android:textSize="12sp"
-            android:text="11:50"/>
-        <TextView
-            android:layout_marginLeft="23dp"
-            android:id="@+id/recode_actioin_text"
-            android:layout_width="wrap_content"
+            android:background="@color/colorWhrite"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/record_times"
+                style="@style/diary_record_text"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
+                android:text="11:50"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="239dp"
+            android:gravity="left"
             android:layout_height="fill_parent"
-            android:textSize="12sp"
-            android:text="@string/fead"/>
+            android:layout_marginLeft="22dp"
+            android:background="@color/colorWhrite"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/recode_actioin_text"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
+                android:text="@string/fead"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -37,6 +54,7 @@
                 android:layout_width="68dp"
                 android:layout_height="68dp"
                 android:background="#00000000"
+                android:layout_marginBottom ="8dp"
                 android:layout_marginLeft ="19dp"
                 android:id="@+id/pet_list_layout"
                 android:orientation="horizontal">
@@ -51,6 +69,7 @@
                     android:minHeight="30dp"
                     android:minWidth="30dp"
                     android:layout_marginTop ="19dp"
+                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="40dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -66,6 +85,7 @@
                     android:minHeight="30dp"
                     android:minWidth="30dp"
                     android:layout_marginTop ="19dp"
+                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -81,6 +101,7 @@
                     android:minHeight="30dp"
                     android:minWidth="30dp"
                     android:layout_marginTop ="19dp"
+                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="18dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -96,6 +117,7 @@
                     android:minHeight="30dp"
                     android:minWidth="30dp"
                     android:layout_marginTop ="19dp"
+                    android:layout_marginBottom ="16dp"
                     android:layout_marginLeft ="7dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -110,12 +132,12 @@
                 android:maxWidth="45dp"
                 android:minHeight="45dp"
                 android:minWidth="45dp"
-                android:layout_marginTop ="13dp"
+                android:layout_marginBottom ="18dp"
                 android:src="@mipmap/fade" />
             <TextView
                 android:id="@+id/recode_remark_text"
                 android:layout_width="101dp"
-                android:layout_height="65dp"
+                android:layout_height="68dp"
                 android:textSize="12sp"
                 android:layout_marginLeft="6dp"
                 android:singleLine="false"
@@ -127,10 +149,10 @@
                 android:layout_height="68dp"
                 android:scaleType="center"
                 android:adjustViewBounds="true"
-                android:maxHeight="68dp"
-                android:maxWidth="101dp"
-                android:minHeight="68dp"
-                android:minWidth="101dp"
+                android:maxHeight="57dp"
+                android:maxWidth="85dp"
+                android:minHeight="57dp"
+                android:minWidth="85dp"
                 android:src="@mipmap/fade" />
     </LinearLayout>
 </LinearLayout>
